# ModView

./: .gitignore  CMakeLists.txt  CMakePresets.json  NOTICE.md  README.md
.github/workflows/: build.yml
code/: anims.cpp  anims.h  clipboard.cpp  clipboard.h  efx.cpp  efx.h  generic_stuff.cpp  generic_stuff.h  gl_bits.cpp  glm_code.cpp  jpeg_interface.cpp  jpeg_interface.h  mainfrm.cpp  mainfrm.h  model.cpp  model.h  modview.cpp  modview.rc  modview_version.h.in  modviewdoc.cpp  modviewtreeview.cpp  modviewtreeview.h  modviewview.cpp  oldskins.cpp  r_common.h  r_glm.cpp  r_model.cpp  r_surface.cpp  r_surface.h  resource.h  scene_state.cpp  shader.cpp  shader.h  skins.cpp  skins.h  textures.cpp  textures.h  updater.cpp  updater.h
